--- a/styles/style.scss
+++ b/styles/style.scss
@@ -131,7 +131,14 @@ img {
   color: #cc3300;
   font-weight: bold;
   font-size: $buttonFontSize;
+  cursor: pointer;
 }
+
+#first-cat-wiki-button:hover {
+  color: $primaryTanColor;
+  background-color: #cc3300;
+}
+
 #second-cat-wiki-button {
   width: 55%;
   height: $catWikiButtonHeight;
@@ -140,8 +147,13 @@ img {
   color: #f8fdfc;
   border: 1px solid;
   font-size: $buttonFontSize;
+  cursor: pointer;
 }
 
+#second-cat-wiki-button:hover {
+  color: #cc3300;
+  background-color: #f8fdfc;
+}
 /* mobile view */
 @media only screen and (max-width: 700px) {
   #first-cat-description,
