--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
 
 body {
   margin: 0;
-  padding: 50px;
+  padding: 30px;
 }
 
 #second-cat-image {
@@ -77,7 +77,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 100vh;
+  height: 110vh;
   top: 50%;
   left: 50%;
   padding: 20px;
@@ -98,7 +98,7 @@ body {
       -ms-flex-align: center;
           align-items: center;
   width: 40%;
-  height: 95vh;
+  height: 110vh;
   margin-right: 50px;
 }
 
@@ -117,7 +117,7 @@ body {
       -ms-flex-align: center;
           align-items: center;
   width: 40%;
-  height: 95vh;
+  height: 110vh;
 }
 
 .first-cat-info {
@@ -177,11 +177,12 @@ img {
   width: 55%;
   height: 7vh;
   background-color: #cab88e;
-  border: 4px solid #cc3300;
+  border: 3px solid #cc3300;
   color: #cc3300;
   font-weight: bold;
   font-size: 14px;
   cursor: pointer;
+  outline: none;
 }
 
 #first-cat-wiki-button:hover {
@@ -198,6 +199,7 @@ img {
   border: 1px solid;
   font-size: 14px;
   cursor: pointer;
+  outline: none;
 }
 
 #second-cat-wiki-button:hover {
@@ -207,6 +209,9 @@ img {
 
 /* mobile view */
 @media only screen and (max-width: 700px) {
+  body {
+    padding: 10px;
+  }
   #first-cat-description,
   #second-cat-description {
     font-size: 13px;
@@ -214,7 +219,10 @@ img {
   #first-cat-name,
   #second-cat-name {
     font-size: 20px;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
+  }
+  img {
+    height: 35vh;
   }
   .cats-wrapper {
     display: block;
@@ -236,16 +244,18 @@ img {
   }
   .first-cat-info,
   .second-cat-info {
-    height: 30vh;
+    height: 45vh;
+    margin-bottom: 15px;
   }
   #first-cat-origin,
   #second-cat-origin {
-    margin-bottom: 30px;
+    margin-bottom: 8px;
   }
   #first-cat-wiki-button,
   #second-cat-wiki-button {
     font-size: 12px;
     height: 4vh;
+    border: 1px solid #cc3300;
   }
 }
 /*# sourceMappingURL=style.css.map */
