--- a/styles/style.scss
+++ b/styles/style.scss
@@ -2,19 +2,20 @@ $catNameSize: 28px;
 $catOriginSize: 12px;
 $catDescriptionSize: 16px;
 $buttonFontSize: 14px;
-$catContainer: 95vh;
-$primaryTanColor: #cab88e;
+$catContainer: 110vh;
+$primaryColorTan: #cab88e;
 $imageOpacity: 0.6;
 $catImageSize: 35%;
 $primaryFontColor: #363024;
 $catWikiButtonHeight: 7vh;
+$secondaryColorRed: #cc3300;
 * {
   box-sizing: border-box;
   font-family: "Lato", sans-serif;
 }
 body {
   margin: 0;
-  padding: 50px;
+  padding: 30px;
 }
 #second-cat-image {
   display: flex;
@@ -26,7 +27,7 @@ body {
   position: relative;
   &:before {
     content: "";
-    background: $primaryTanColor;
+    background: $primaryColorTan;
     opacity: $imageOpacity;
     position: absolute;
     width: 100%;
@@ -43,7 +44,7 @@ body {
   position: relative;
   &:before {
     content: "";
-    background: $primaryTanColor;
+    background: $primaryColorTan;
     opacity: $imageOpacity;
     position: absolute;
     width: 100%;
@@ -62,7 +63,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 110vh;
   top: 50%;
   left: 50%;
   padding: 20px;
@@ -85,7 +86,7 @@ body {
   height: $catContainer;
 }
 .first-cat-info {
-  background-color: $primaryTanColor;
+  background-color: $primaryColorTan;
   height: 50vh;
   width: 100%;
   display: flex;
@@ -126,36 +127,41 @@ img {
 #first-cat-wiki-button {
   width: 55%;
   height: $catWikiButtonHeight;
-  background-color: $primaryTanColor;
-  border: 4px solid #cc3300;
-  color: #cc3300;
+  background-color: $primaryColorTan;
+  border: 3px solid $secondaryColorRed;
+  color: $secondaryColorRed;
   font-weight: bold;
   font-size: $buttonFontSize;
   cursor: pointer;
+  outline: none;
 }
 
 #first-cat-wiki-button:hover {
-  color: $primaryTanColor;
-  background-color: #cc3300;
+  color: $primaryColorTan;
+  background-color: $secondaryColorRed;
 }
 
 #second-cat-wiki-button {
   width: 55%;
   height: $catWikiButtonHeight;
   font-weight: bold;
-  background-color: #cc3300;
+  background-color: $secondaryColorRed;
   color: #f8fdfc;
   border: 1px solid;
   font-size: $buttonFontSize;
   cursor: pointer;
+  outline: none;
 }
 
 #second-cat-wiki-button:hover {
-  color: #cc3300;
+  color: $secondaryColorRed;
   background-color: #f8fdfc;
 }
 /* mobile view */
 @media only screen and (max-width: 700px) {
+  body {
+    padding: 10px;
+  }
   #first-cat-description,
   #second-cat-description {
     font-size: 13px;
@@ -164,9 +170,11 @@ img {
   #first-cat-name,
   #second-cat-name {
     font-size: 20px;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
   }
-
+  img {
+    height: 35vh;
+  }
   .cats-wrapper {
     display: block;
   }
@@ -184,17 +192,19 @@ img {
   }
   .first-cat-info,
   .second-cat-info {
-    height: 30vh;
+    height: 45vh;
+    margin-bottom: 15px;
   }
 
   #first-cat-origin,
   #second-cat-origin {
-    margin-bottom: 30px;
+    margin-bottom: 8px;
   }
 
   #first-cat-wiki-button,
   #second-cat-wiki-button {
     font-size: 12px;
     height: 4vh;
+    border: 1px solid $secondaryColorRed;
   }
 }
